k8s/kustomize/overlays/sandbox-ops-managed/platform-k8s-go-sample-app-nginx-ingress-example/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-k8s-go-sample-app-nginx-ingress-example
spec:
  replicas: 2
